# ChangeLog for dev-python/etsprojecttools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/etsprojecttools/Attic/ChangeLog,v 1.6 2010/06/22 18:36:48 arfrever Exp $

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  etsprojecttools-0.5.1.ebuild, etsprojecttools-0.6.0.ebuild:
  dev-util/subversion renamed to dev-vcs/subversion.

  25 Mar 2010; Sébastien Fabbro <bicatali@gentoo.org>
  etsprojecttools-0.6.0.ebuild:
  Avoid the need of setupdocs automagic

*etsprojecttools-0.6.0 (21 Mar 2010)

  21 Mar 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +etsprojecttools-0.6.0.ebuild:
  Version bump

*etsprojecttools-0.5.1 (05 Sep 2009)

  05 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -etsprojecttools-0.4.2.ebuild, +etsprojecttools-0.5.1.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

*etsprojecttools-0.5.0 (27 Mar 2009)

  27 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +etsprojecttools-0.5.0.ebuild:
  Version bump

*etsprojecttools-0.4.2 (15 Jan 2009)

  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +etsprojecttools-0.4.2.ebuild:
  Initial import
