@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/etsprojecttools
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/etsprojecttools/Attic/ChangeLog,v 1.6 2010/06/22 18:36:48 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/etsprojecttools/Attic/ChangeLog,v 1.7 2011/02/01 01:37:18 arfrever Exp $
+
+  01 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -etsprojecttools-0.5.1.ebuild:
+  Delete.
 
   22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   etsprojecttools-0.5.1.ebuild, etsprojecttools-0.6.0.ebuild:
